--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.19.2",
+    "lucide": "^0.525.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.19.2",
     "next": "15.3.4",
