--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "motion": "^12.19.2",
     "next": "15.3.4",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
   },
