--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.19.2",
@@ -16,15 +18,20 @@
     "lucide-react": "^0.525.0",
     "motion": "^12.19.2",
     "next": "15.3.4",
+    "nodemailer": "^7.0.4",
     "react": "^19.0.0",
+    "react-bits": "^1.0.5",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1"
+    "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
